src - MTDEV2/objects/MT_ForecastVersion__c.object
<CustomObject>
    <fields>
        <fullName>MT_AutoNumber__c</fullName>
        <description>Das ist eine automatische Zahl um eine einwandfreie Benennung zu gewährleisten.  Dieser Wert wird mit Beginn eines neuen Jahres zurückgesetzt.</description>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MT_Deadline__c</fullName>
        <defaultValue>IF(MONTH(TODAY()) &gt; 10, DATE(YEAR(TODAY()) + 1, MONTH(TODAY()) - 10, 5), DATE(YEAR(TODAY()), MONTH(TODAY()) + 2, 5))</defaultValue>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_UseActualsUntil__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()), MONTH(TODAY()), 1)</defaultValue>
        <description>The month up to which to use actual data in the forecast.</description>
        <label>Use actual data until month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_UsePlanningDataUntil__c</fullName>
        <defaultValue>IF(MONTH(TODAY()) &gt; 10, DATE(YEAR(TODAY()) + 1, MONTH(TODAY()) - 10, 1), DATE(YEAR(TODAY()), MONTH(TODAY()) + 2, 1))</defaultValue>
        <label>Use planning data until month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_VersionDate__c</fullName>
        <defaultValue>IF(MONTH(TODAY()) = 12, DATE(YEAR(TODAY()) + 1, 1, 1), DATE(YEAR(TODAY()), MONTH(TODAY()) + 1, 1))</defaultValue>
        <description>The month this forecast version applies to (e.g. creation month).</description>
        <label>Version Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_VersionName__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY())) &amp;&quot;_&quot;&amp; CASE(MONTH(TODAY())+1, 1, &quot;Januar&quot;, 2, &quot;Februar&quot;, 3, &quot;März&quot;,  4, &quot;April&quot;,  5, &quot;Mai&quot;,  6, &quot;Juni&quot;, 7, &quot;Juli&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;Oktober&quot;, 11, &quot;November&quot;, 12, &quot;Dezember&quot;, 13, &quot;Januar&quot;, &quot;None&quot;) &amp; &quot;_01&quot;</defaultValue>
        <label>Version Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Media Forecast Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MFV-{000000}</displayFormat>
        <label>Forecast Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Forecast Versions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>MT_ActualDateInVersionDateYear</fullName>
        <active>true</active>
        <description>Checks that the actual date year is within the version date year</description>
        <errorConditionFormula>YEAR( MT_UseActualsUntil__c ) &lt;&gt; YEAR( MT_VersionDate__c )</errorConditionFormula>
        <errorDisplayField>MT_UseActualsUntil__c</errorDisplayField>
        <errorMessage>Das &quot;Actual Date&quot; muss sich im &quot;Version Date&quot; Jahr befinden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_ActualDateNotAfterPlannedDate</fullName>
        <active>true</active>
        <description>Checks if the Actual date is before the Planned date</description>
        <errorConditionFormula>MT_UsePlanningDataUntil__c &lt;  MT_UseActualsUntil__c</errorConditionFormula>
        <errorDisplayField>MT_UseActualsUntil__c</errorDisplayField>
        <errorMessage>Das &quot;Actual Date&quot; muss sich vor dem &quot;Planned Date&quot; befinden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_PlannedDateInVersionDateYear</fullName>
        <active>true</active>
        <description>Checks if the planned date is within the version date year</description>
        <errorConditionFormula>YEAR( MT_UsePlanningDataUntil__c ) &lt;&gt; YEAR( MT_VersionDate__c )</errorConditionFormula>
        <errorDisplayField>MT_UsePlanningDataUntil__c</errorDisplayField>
        <errorMessage>Das &quot;Planned Date&quot; muss sich innerhalb des &quot;Version Date&quot; Jahres befinden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VersionDateDiesesFolgendesJahr</fullName>
        <active>true</active>
        <description>Validates that the entered value is for the current or next year.</description>
        <errorConditionFormula>OR(YEAR(MT_VersionDate__c) &gt; YEAR(TODAY())+1, YEAR(MT_VersionDate__c) &lt; YEAR(TODAY()))</errorConditionFormula>
        <errorDisplayField>MT_VersionDate__c</errorDisplayField>
        <errorMessage>Das eingetragene Datum liegt nicht in diesem oder im nächsten Jahr.</errorMessage>
    </validationRules>
</CustomObject>